--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,7 +9,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: POSIX :: Linux",
 ]
-dependencies = ["torch==2.5.1.*"]
+dependencies = ["torch"]
 
 
 [project.urls]
@@ -26,5 +26,5 @@ include-package-data = false
 NNPOps = "pytorch"
 
 [build-system]
-requires = ["setuptools>=64", "setuptools-scm>=8", "torch==2.5.1.*"]
+requires = ["setuptools>=64", "setuptools-scm>=8", "torch"]
 build-backend = "setuptools.build_meta"
