--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,10 @@ jobs:
             pytorch: "2.5.*"
           - name: Linux (CUDA 12, Python 3.13, PyTorch 2.9)
             enable_cuda: true
-            cuda: "12.6.0"
+            cuda: "12.*"
             gcc: "10.3.*"
             nvcc: "12.*"
-            python: "3.13.*"
+            python: "3.*"
             torchani: "2.2.*"
             pytorch: "2.9.*"
 
