--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,33 +22,25 @@ jobs:
       matrix:
         include:
 
-          # # Oldest supported versions
-          # - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
-          #   enable_cuda: true
-          #   cuda: "11.8.0"
-          #   gcc: "10.3.*"
-          #   nvcc: "11.8"
-          #   python: "3.10.*"
-          #   torchani: "2.2.*"
-          #   pytorch: "2.0.*"
-
-          # # Latest supported versions (with CUDA)
-          # - name: Linux (CUDA 12, Python 3.13, PyTorch 2.5)
-          #   enable_cuda: true
-          #   cuda: "12.6.0"
-          #   gcc: "10.3.*"
-          #   nvcc: "12.*"
-          #   python: "3.13.*"
-          #   torchani: "2.2.*"
-          #   pytorch: "2.5.*"
-          - name: Linux (CUDA 12, Python 3.13, PyTorch 2.9)
+          # Oldest supported versions
+          - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
             enable_cuda: true
-            cuda: "12.9.0"
+            cuda: "11.8.0"
             gcc: "10.3.*"
-            nvcc: "12.9"
-            python: "3.*"
+            nvcc: "11.8"
+            python: "3.10.*"
             torchani: "2.2.*"
-            pytorch: "2.9.*"
+            pytorch: "2.0.*"
+
+          # Latest supported versions (with CUDA)
+          - name: Linux (CUDA 12, Python 3.13, PyTorch >=2.0)
+            enable_cuda: true
+            cuda: "12.6.0"
+            gcc: "10.3.*"
+            nvcc: "12.*"
+            python: "3.13.*"
+            torchani: "2.2.*"
+            pytorch: "2.*"
 
     steps:
     - name: Check out
@@ -58,7 +50,7 @@ jobs:
       uses: jlumbroso/free-disk-space@main
 
     - name: Install CUDA Toolkit
-      uses: Jimver/cuda-toolkit@v0.2.29
+      uses: Jimver/cuda-toolkit@v0.2.21
       with:
         cuda: ${{ matrix.cuda }}
         linux-local-args: '["--toolkit", "--override"]'
